Revert "#15 - Fixed spacing issue with cards based on Stefan's suggestion. Cards are now evenly spaced within the card container, which removes the extra space on the right side of the container"
This reverts commit 356dc459e45de4ece035e88abd8e9ff62298cefa.

--- a/Accio.Web/wwwroot/css/accio.css
+++ b/Accio.Web/wwwroot/css/accio.css
@@ -246,10 +246,6 @@ footer {
         font-family: var(--sansSerif);
     }
 
-#cardContainer {
-    justify-content: space-evenly;
-}
-
 /* Hogwarts Houses */
 .crest {
     position: relative;
